Bug #53150
pybind/mgr/cephadm/upgrade: tolerate MDS failures during upgrade straddling v16.2.5
Status:
Resolved
Priority:
Urgent
Assignee:
Category:
Correctness/Safety
Target version:
% Done:
0%
Source:
Q/A
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
qa, qa-failure
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
If a v16.2.4 or older MDS fails and rejoins, the compat set assigned to it is the empty set (because it sends no compatset in its beacons). This prevents cephadm upgrade process from proceeding because the mons can do no replacement.
See: /ceph/teuthology-archive/sage-2021-11-03_12:41:33-orch:cephadm:mds_upgrade_sequence-wip-sage3-testing-2021-11-02-1033-distro-basic-smithi/6481266/teuthology.log
History
#1 Updated by Patrick Donnelly about 1 year ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 43800
#2 Updated by Patrick Donnelly about 1 year ago
- Status changed from Fix Under Review to Resolved
backport will be tracked by #53155